# TeamFabric

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Fabric-Integration-Tips.md  LICENSE  LICENSE.md  PITCH.md  README.md  ROADMAP.md  SHOWCASE.md  backlog-index.md  backlog.md  fabric-design-summary.md  welcome.md
.claude/: settings.json
Example/: .claude  .gitignore  (+3 more)
Fabric/browser/: .gitignore  README.md  browser.py  parser.py  pyproject.toml  server.py
Fabric/browser/app/: .gitignore  README.md  angular.json  package-lock.json  package.json
Fabric/browser/app/src/: index.html  styles.scss
Fabric/browser/app/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.ts
Fabric/browser/app/src/app/components/archive-view/: archive-view.ts
Fabric/browser/app/src/app/components/epic-nav/: epic-nav.ts
Fabric/browser/app/src/app/components/git-actions/: git-actions.ts
Fabric/browser/app/src/app/components/item-detail-panel/: item-detail-panel.html  item-detail-panel.scss  item-detail-panel.ts
Fabric/browser/app/src/app/components/item-list/: item-list.html  item-list.scss  item-list.ts
Fabric/browser/app/src/app/components/search-view/: search-view.html  search-view.scss  search-view.ts
Fabric/browser/app/src/app/components/sprint-board/: sprint-board.html  sprint-board.scss  sprint-board.ts
Fabric/browser/app/src/app/components/state-badge/: state-badge.ts
Fabric/browser/app/src/app/models/: backlog.models.ts
Fabric/browser/app/src/app/services/: backlog.service.ts  filter.service.ts
fabscripts/: backlog_index.py  pyproject.toml  spec_sha.py
(+216 files in other folders)
