[project]
name = "fabricscripts"
version = "0.1.0"
description = "A set of scripts for working with team fabric"
authors = [
    {name = "Eric Winter",email = "Winter.Eric@mayo.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
